Name:                   herf-time
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               haskell time manipulation in a 'kerf like' style.
Description:
            The herf-time package attempts to make the time package's syntax more straightforward for doing interval math and conversion.
            It borrows heavily from the syntax of the kerf programming language <https://github.com/kevinlawler/kerf> .
            But unlike kerf, there are no promisses of high performance code here.
            The performance seems adequate for lots of uses though and manipulating time in the herf library is pretty fun.
            .
            The @KerfTime@ module is self contained and the only dependency is the time package.
            .
            Add intervals of varying amounts.
            .
            > date 2016 01 01 `add` hour 3 `add` week 16 `add` month 3 :: UTCHerfTime 
            UTCHerfTime 2016-07-22 03:00:00 UTC
            .
            Subtract intervals as well
            .
            > date 2016 01 01 `add` hour (-3) `add` week (-16) `add` month (-3) :: UTCHerfTime
            UTCHerfTime 2015-06-10 21:00:00 UTC
            .
            Use the same interval notation for different time representation
            .
            > dateTime 2016 01 01 01 23 01 `add` (hour 3) `add` (week 16) `add` (month 3) :: UTCHerfTime
            UTCHerfTime 2016-07-22 04:23:01 UTC
            .
            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      HerfTime

--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
                      , time >= 1.5 && < 1.7



Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , doctest
                      , herf-time
                      

Source-Repository head
  Type:                 git
  Location:             https://github.com/smurphy8/herf-time
